[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/theme/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/Controlling.gd" type="Script" id=2]
[ext_resource path="res://ui/ui.gd" type="Script" id=3]
[ext_resource path="res://ui/theme/fonts/font1.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu/change_scene_button.gd" type="Script" id=5]
[ext_resource path="res://ui/theme/fonts/font2.tres" type="DynamicFont" id=6]

[sub_resource type="InputEventAction" id=1]
action = "enter"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "quit"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Controlling" type="HSplitContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 960
dragger_visibility = 1
script = ExtResource( 2 )

[node name="Left" type="Button" parent="Controlling"]
margin_right = 972.0
margin_bottom = 1080.0
shortcut_in_tooltip = false
action_mode = 0

[node name="Right" type="Button" parent="Controlling"]
margin_left = 984.0
margin_right = 1920.0
margin_bottom = 1080.0
shortcut_in_tooltip = false
action_mode = 0

[node name="Score" type="Label" parent="."]
margin_left = 59.0
margin_right = 475.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 4 )
text = "Score: 0"

[node name="Kills" type="Label" parent="."]
margin_left = 58.0
margin_top = 137.0
margin_right = 265.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 6 )
text = "Kills: 0"

[node name="ShipCount" type="Label" parent="."]
margin_left = 111.0
margin_top = 908.0
margin_right = 396.0
margin_bottom = 1013.0
rect_pivot_offset = Vector2( -52, -1217 )
text = "[0, 0, 0, 0]"

[node name="GameOver" type="Control" parent="."]
margin_left = 665.0
margin_top = 426.0
margin_right = 1322.0
margin_bottom = 733.0

[node name="Text" type="Label" parent="GameOver"]
margin_top = -251.0
margin_right = 637.0
margin_bottom = -76.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over !"

[node name="Score" type="Label" parent="GameOver"]
margin_left = 68.0
margin_top = -90.0
margin_right = 485.0
margin_bottom = 123.0
text = "Final Score: 
0"
align = 1

[node name="Kills" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.5
margin_top = -39.5
margin_right = 22.5
margin_bottom = 65.5
custom_fonts/font = ExtResource( 6 )
text = "(Kills: 0)"

[node name="Retry" type="Button" parent="GameOver"]
margin_top = 206.0
margin_right = 180.0
margin_bottom = 317.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Retry"
flat = true
script = ExtResource( 5 )
scene_path = "res://main/main.tscn"

[node name="Quit" type="Button" parent="GameOver"]
margin_left = 385.0
margin_top = 206.0
margin_right = 565.0
margin_bottom = 317.0
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Quit"
flat = true
script = ExtResource( 5 )
scene_path = "res://menu/menu.tscn"

[node name="Quit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_bottom = 111.0
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Quit"
flat = true
script = ExtResource( 5 )
scene_path = "res://menu/menu.tscn"

[connection signal="button_down" from="Controlling/Left" to="Controlling" method="_on_Left_button_down"]
[connection signal="button_up" from="Controlling/Left" to="Controlling" method="_on_Left_button_up"]
[connection signal="button_down" from="Controlling/Right" to="Controlling" method="_on_Right_button_down"]
[connection signal="button_up" from="Controlling/Right" to="Controlling" method="_on_Right_button_up"]
